# punytunes

./: README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
src/: App.svelte  styles.css  vars.css
src-tauri/: Cargo.toml  tauri.conf.FLOATING.json  tauri.conf.SYSTEM_TRAY.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: amplifier_manager.rs  average.rs  commands.rs  errors.rs  lib.rs  macros.rs  main.rs  messaging.rs  persisted_state.rs  state.rs  streammagic_manager.rs  traits.rs  utils.rs
src-tauri/src/amplifier_manager/: amplifier_handler.rs  discovery.rs  hegel.rs
src-tauri/src/streammagic_manager/: discovery.rs  payloads.rs  websocket_client.rs
src/lib/: artCache.ts  commands.ts  preAmpManager.ts  pubSub.ts  requestPool.ts  state.ts  themeManager.ts  transportManager.ts  updatesManager.ts  userSettings.ts  utils.ts
src/lib/components/: Details.svelte  KeyboardShortcuts.svelte  Loader.svelte  NowPlaying.svelte
src/lib/components/buttons/: AmplifierPowerButton.svelte  IconButton.svelte  PowerButton.svelte  SimpleDetailedSwitch.svelte  ToggleButton.svelte
src/lib/components/dataDisplay/: ActivatingIndicator.svelte  Arc.svelte  Art.svelte  AudioFormat.svelte  AudioSource.svelte  Badge.svelte  ErrorMessage.svelte  JsonView.svelte  SuccessMessage.svelte  WarningMessage.svelte
src/lib/components/dataDisplay/artClients/: ArtBrowserClient.svelte  (+1 more)
src/lib/components/detailViews/: Dev.svelte  Info.svelte  Logs.svelte  Payloads.svelte  Presets.svelte  Queue.svelte  Sources.svelte  Streamer.svelte  UserSettings.svelte
src/lib/components/overlays/: ActivatingDevice.svelte  LatestError.svelte  Tooltip.svelte
(+11 files in other folders)
