[package]
name = "punytunes"
version = "1.1.0"
description = "A system tray controller for StreamMagic audio streamers"
authors = []
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
async-trait = "0.1.74"
bytes = "1.5.0"
futures = "0.3.29"
futures-util = "0.3.29"
log = "0.4.20"
memoize = "0.4.1"
pin-utils = "0.1.0"
regex = "1.10.3"
reqwest = "0.11.22"
rupnp = { version = "2.0.0", features = ["full_device_spec"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.29.11"
tauri = { version = "1.5", features = [ "process-relaunch", "process-exit", "shell-open", "http-all", "system-tray", "macos-private-api", "icon-ico" ] }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1", features = ["colored"] }
tauri-plugin-positioner = { version = "1.0.4", features = ["system-tray"] }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-theme = "0.2.0"
thiserror = "1.0.50"
time = "0.3.36"
tokio = { version = "1.34.0", features = ["full"] }
tokio-tungstenite = "0.20.1"
ts-rs = "7.0.0"
tungstenite = "0.20.1"
url = "2.4.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
